--- a/wechat/manifest.json
+++ b/wechat/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "mall-app-web",
-    "appid" : "__UNI__3411586",
+    "appid" : "__UNI__EC193C1",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -60,7 +60,8 @@
         "appid" : "wxfc872e07778f40eb",
         "setting" : {
             "urlCheck" : true
-        }
+        },
+        "permission" : {}
     },
     "h5" : {
         "devServer" : {
