--- a/wechat/manifest.json
+++ b/wechat/manifest.json
@@ -61,7 +61,10 @@
         "setting" : {
             "urlCheck" : true
         },
-        "permission" : {}
+        "permission" : {},
+		"optimization": {
+			"subPackages":true //是否启用分包优化
+		}
     },
     "h5" : {
         "devServer" : {
