--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
         "spark-md5": "^3.0.2",
         "tailwindcss": "^3.3.3",
         "tinymce": "^6.7.2",
+        "v-distpicker": "^2.1.0",
         "vue": "^3.3.4",
         "vue-draggable-plus": "^0.2.6",
         "vue-router": "^4.2.4"
